# CG-NET

./: .gitignore  LICENSE  README.md  __init__.py  config.yml  data.py  env.yml  main.py  model.py  predict.py  pyproject.toml  requirements.txt  setup.py
cgcnn/: data.py  model.py
cgnet/: __main__.py  data.py  model.py
cgnet/cli/: __init__.py  __main__.py  main.py  templates.py  utils.py  validators.py
cgnet/configs/: README.md  classification.yml  prediction.yml  regression.yml
cgnet/models/: __init__.py  cgnet.py
cgnet/trainers/: README.md  __init__.py  config_manager.py  data_manager.py  model_manager.py  slurm_manager.py  trainer.py  training_manager.py
cgnet/utils/: __init__.py  data.py  featureizer.py
datasets/: README.md
example/: train.py
example/process-id-prop/: README.md  requirements.txt
example/raw_dataset/: agaualcupt_cho-final_s1.cif  agaualcupt_cho-final_s2.cif  agaualcupt_cho-final_s3.cif  agaualcupt_cho-final_s4.cif  agaualcupt_cho-final_s5.cif  agaualcupt_co-final_s1.cif  agaualcupt_co-final_s2.cif  agaualcupt_co-final_s4.cif  agaualcupt_co-final_s5.cif  agaualcupt_coh-final_s1.cif  agaualcupt_coh-final_s2.cif  agaualcupt_coh-final_s3.cif  agaualcupt_coh-final_s4.cif  agaualcupt_coh-final_s5.cif  agaualcupt_cooh-final_s1.cif  agaualcupt_cooh-final_s2.cif  agaualcupt_cooh-final_s3.cif  agaualcupt_cooh-final_s4.cif  agaualcupt_cooh-final_s5.cif  agaualcupt_h-final_s1.cif  agaualcupt_h-final_s2.cif  agaualcupt_h-final_s3.cif  agaualcupt_h-final_s4.cif  agaualcupt_h-final_s5.cif  agaucuptpd_cho-final_s1.cif  agaucuptpd_cho-final_s2.cif  (+49 more)
(+3 files in other folders)
